# SearchSpotify

./: LICENSE  PKG-INFO  README.md  calls.py  classes.py  client.py  constructor.py  setup.cfg  urlbuilder.py
.github/workflows/: pypipublish.yml
src/searchspotify/: __init__.py  async_calls.py  async_classes.py  async_client.py  async_urlbuilder.py  calls.py  classes.py  client.py  constructor.py  urlbuilder.py
src/searchspotify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spotifysearch/: __init__.py  calls.py  classes.py  client.py  constructor.py  urlbuilder.py
src/spotifysearch.egg-info/: PKG-INFO  SOURCES.txt
src/spotifysearch/SearchSpotify/: LICENSE  README.md  calls.py  classes.py  client.py  constructor.py  urlbuilder.py
