[metadata]
name = searchspotify
version = 0.1.0
author = True Saiyan
description = A complete wrapper for the Search API provided by Spotify written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ufoptg/SearchSpotify
project_urls = 
	Bug Tracker = https://github.com/ufoptg/SearchSpotify/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

